--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Золотая корка — пекарня</title>
+
+<!-- PWA -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#F5B942">
 
 <style>
 :root{
@@ -23,7 +28,7 @@ body{
   overflow-x:hidden;
 }
 
-/* ===== ДЕКОР ===== */
+/* ДЕКОР */
 .sun{
   position:fixed;
   top:-140px;
@@ -52,13 +57,12 @@ body{
   0%,100%{transform:scale(1)}
   50%{transform:scale(1.12)}
 }
-
 @keyframes float{
   from{transform:translateY(0)}
   to{transform:translateY(-50px)}
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
 header{
   background:linear-gradient(180deg,#fff,#FFF3D1);
   text-align:center;
@@ -86,7 +90,6 @@ header p{
   font-size:18px;
 }
 
-/* ===== КОНТАКТЫ ===== */
 .contacts a{
   display:inline-block;
   margin:6px;
@@ -98,7 +101,7 @@ header p{
   font-weight:600;
 }
 
-/* ===== ОСНОВА ===== */
+/* ОСНОВА */
 section{
   max-width:1200px;
   margin:auto;
@@ -107,7 +110,7 @@ section{
 
 h2{text-align:center}
 
-/* ===== ПРОДУКТЫ ===== */
+/* ПРОДУКТЫ */
 .products{
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
@@ -132,8 +135,6 @@ h2{text-align:center}
   to{opacity:1;transform:translateY(0)}
 }
 
-.card h3{margin-top:0}
-
 .card button{
   background:linear-gradient(90deg,var(--gold),var(--gold2));
   border:none;
@@ -145,7 +146,7 @@ h2{text-align:center}
   font-weight:bold;
 }
 
-/* ===== КОРЗИНА ===== */
+/* КОРЗИНА */
 .cart{
   margin-top:60px;
   background:#fff;
@@ -155,7 +156,6 @@ h2{text-align:center}
 }
 
 .cart ul{list-style:none;padding:0}
-
 .cart li{
   display:flex;
   justify-content:space-between;
@@ -186,18 +186,17 @@ h2{text-align:center}
   50%{box-shadow:0 0 30px rgba(245,185,66,.9)}
 }
 
-/* ===== QR ===== */
+/* QR */
 .qr{
   text-align:center;
   margin-top:50px;
 }
-
 .qr img{
   width:180px;
   animation:float 5s infinite alternate;
 }
 
-/* ===== УВЕДОМЛЕНИЕ ===== */
+/* УВЕДОМЛЕНИЕ */
 .toast{
   position:fixed;
   bottom:30px;
@@ -213,11 +212,10 @@ h2{text-align:center}
 
 @keyframes toast{
   0%{opacity:0;transform:translateY(20px)}
-  10%,90%{opacity:1;transform:translateY(0)}
+  10%,90%{opacity:1}
   100%{opacity:0}
 }
 
-/* ===== FOOTER ===== */
 footer{
   text-align:center;
   padding:30px;
@@ -225,7 +223,6 @@ footer{
   margin-top:60px;
 }
 
-/* ===== МОБИЛКА ===== */
 @media(max-width:600px){
   header h1{font-size:34px}
 }
@@ -240,7 +237,7 @@ footer{
 <header>
   <img src="logo.png" alt="Золотая корка">
   <h1>Золотая корка</h1>
-  <p>Свежая выпечка • Тёплый хлеб • Грозный</p>
+  <p>Свежая выпечка • Грозный</p>
 
   <div class="contacts">
     <a href="tel:+79296365464">📞 Позвонить</a>
@@ -255,9 +252,7 @@ footer{
   <div class="card"><h3>Багет</h3><p>120 ₽</p><button onclick="add('Багет',120)">В корзину</button></div>
   <div class="card"><h3>Круассан</h3><p>150 ₽</p><button onclick="add('Круассан',150)">В корзину</button></div>
   <div class="card"><h3>Хлеб деревенский</h3><p>90 ₽</p><button onclick="add('Хлеб деревенский',90)">В корзину</button></div>
-  <div class="card"><h3>Булочка с корицей</h3><p>110 ₽</p><button onclick="add('Булочка с корицей',110)">В корзину</button></div>
   <div class="card"><h3>Самса</h3><p>130 ₽</p><button onclick="add('Самса',130)">В корзину</button></div>
-  <div class="card"><h3>Пирог яблочный</h3><p>220 ₽</p><button onclick="add('Пирог яблочный',220)">В корзину</button></div>
 </div>
 
 <div class="cart">
@@ -279,47 +274,41 @@ footer{
 </footer>
 
 <script>
-let total = 0
-let items = []
+let total=0
+let items=[]
 
-function add(name, price){
-  const li = document.createElement('li')
-  li.innerHTML = `${name} <b>${price} ₽</b>`
+function add(name,price){
+  const li=document.createElement('li')
+  li.innerHTML=`${name} <b>${price} ₽</b>`
   document.getElementById('cart').appendChild(li)
-
-  total += price
+  total+=price
   items.push(name)
-
-  document.getElementById('total').innerText = 'Итого: ' + total + ' ₽'
-  toast('Добавлено: ' + name)
+  document.getElementById('total').innerText='Итого: '+total+' ₽'
+  toast('Добавлено: '+name)
 }
 
 function pay(){
-  if(total === 0){
-    toast('Корзина пуста')
-    return
-  }
-
-  const text =
-`Здравствуйте!
+  if(total===0){toast('Корзина пуста');return}
+  const text=`Здравствуйте!
 Хочу заказать:
 ${items.join(', ')}
 
 Итого: ${total} ₽
 Город: Грозный`
-
-  window.open(
-    'https://wa.me/79296365464?text=' + encodeURIComponent(text),
-    '_blank'
-  )
+  window.open('https://wa.me/79296365464?text='+encodeURIComponent(text),'_blank')
 }
 
-function toast(text){
-  const t = document.createElement('div')
-  t.className = 'toast'
-  t.innerText = text
-  document.body.appendChild(t)
-  setTimeout(()=>t.remove(),3000)
+function toast(t){
+  const d=document.createElement('div')
+  d.className='toast'
+  d.innerText=t
+  document.body.appendChild(d)
+  setTimeout(()=>d.remove(),3000)
+}
+
+/* PWA */
+if('serviceWorker'in navigator){
+  navigator.serviceWorker.register('service-worker.js')
 }
 </script>
 
